--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@nextui-org/react": "^2.4.8",
 		"framer-motion": "^11.11.17",
+		"motion": "^11.12.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0",
